fixed invisible text on btns in safari and iphones

--- a/src/styles/base/_font-styles.scss
+++ b/src/styles/base/_font-styles.scss
@@ -232,6 +232,16 @@
   }
 }
 
+.title-colours--small {
+  font-size: 16px;
+  line-height: 1.3;
+  font-weight: bold;
+  background: linear-gradient(29.72deg, #00009A 14.49%, #EB3626 66.87%, #EB3423 80.43%);
+  width: fit-content;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .title-colours--medium {
   font-size: 40px;
   line-height: 1.3333;
