--- a/src/styles/includes/_header.scss
+++ b/src/styles/includes/_header.scss
@@ -40,7 +40,7 @@
   body.is-menu-open & {
     opacity: 1;
     pointer-events: auto;
-    height: 100vh;
+    height: 90vh;
   }
 
   @media screen and (max-width: 340px) {
